# ev_sdk

./: .gitignore  CMakeLists.txt  JSON_Config_File.json  JSON_configuration_file  README.md  Test_Demo.cpp  ji-image.cpp  ji-video.cpp  ji.cpp  ji.h  ji.py  ji_util.h  ji_util.hpp  极市算法SDK说明文档(V2.0).md  极市算法SDK说明文档(V2.1).md  极市算法SDK说明文档V1.0(C&C++)_180911.md  极市算法SDK说明文档V1.0(C++)_180911.md
3rd/boost_interface/: BoostInterface.cpp  BoostInterface.h  Makefile  main.cpp
3rd/cJSON/: CMakeLists.txt
3rd/darknet/: CMakeLists.txt  README.md
3rd/darknet/include/: darknet.h
3rd/encrypted_module-master/: README.md  encrypt_model  model_str.hpp  test_model.txt
3rd/encrypted_module-master/include/: encrypt_wrapper.hpp
3rd/ev_encrypt_module/: README.md
3rd/ev_encrypt_module/include/: encrypt_wrapper.hpp
3rd/ev_encrypt_module/lib/pkgconfig/: ev_encrypt_module.pc
3rd/license/include/: ji_license.h  ji_license_impl.h  ji_license_utils.h
3rd/license/lib/: license_lib.sig
3rd/license/lib/pkgconfig/: ji_license.pc
3rd/license/v10/: CMakeLists.txt  ev_license  privateKey.pem  pubKey.pem
3rd/license/v10/include/: ji_license.h
3rd/license/v10/tools/: ev_license  oneKeyTest.sh
3rd/license/v20_0/include/: ji_license_impl.h
3rd/license/v20_0/lib/: license_lib.sig
3rd/license/v20_0/lib/pkgconfig/: ji_license.pc
3rd/license/v5/: ev_license  oneKeyTest.sh  readme.docx
3rd/license/v5/include/: ji_license.h
3rd/license/v7.1/: oneKeyTest.sh
3rd/wkt_parser/: CMakeLists.txt  README.md
3rd/wkt_parser/include/: WKTParser.h
3rd/wkt_parser/src/: WKTParser.cpp  test-wkt-parser.cpp
BoostInterface/: BoostInterface.cpp  BoostInterface.h  main.cpp
algorithimias sample(image)/: main.cpp
algorithm sample(image)/: ji.cpp
algorithm sample(video)/: main.cpp
algorithm_sample(video)/: ji.cpp  main.cpp
authorization/: .gitignore  privateKey.pem  pubKey.pem
config/: README.md  algo_config.json
convert File2Buffer/: ji_util.h
convert_File2Buffer/: ji_util.h
convert_File2Buffer/linux/: ji_util.h
convert_File2Buffer/windows/: ji_util.h
convert_buffer_to_opencv_mat_c/: gcc-sample-mat.sh  ji.h  ji_sample_mat.cpp  ji_util.h
convert_file_to_buffur_c/: gcc-main.sh  ji.cpp
doc/: Algorithm SDK fast implementation of the program.txt  Authorization.md  Docker安装与简单使用指南.docx  docker_upload.md  极市平台算法Docker镜像规范(C&C++)_20180205.md  极市平台算法SDK规范(C&C++)_20180205.md  极市算法SDK说明文档(V2.5).md  极市算法SDK说明文档V1.0(C&C++)_180911.md
include/: Configuration.hpp  SampleDetector.hpp  ji.h  ji_utils.h  model_str.hpp  pubKey.hpp
model/: README.md  algo_config.json
sample_c/: gcc-so.sh
sample_c/convert_buffer_to_opencv_mat/: ji_sample_mat.cpp
sample_c/standard_sample(convert_file_to_buffur)/: ji.cpp  main.cpp
src/: CMakeLists.txt  Makefile  SampleDetector.cpp  ji.cpp  ji_utils.cpp
test/: Makefile  test.cpp
